--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,6 @@ jobs:
           role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
           output-credentials: true
-        env:
-          AWS_ACCESS_KEY_ID: ${{ steps.assume_role.outputs.access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ steps.assume_role.outputs.secret_access_key }}
-          AWS_DEFAULT_REGION: eu-central-1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -63,6 +59,10 @@ jobs:
           secret-ids: |
             variables
           parse-json-secrets: true
+
+      - name: Fetch ecs task definition
+        run: |
+          aws ecs describe-task-definition --task-definition java-internship-task-definition --region $AWS_REGION > springboot-app-task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
