--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Checkout source
@@ -25,7 +25,14 @@ jobs:
 
       - name: Build Project
         run: mvn clean package -DskipTests
+        uses: actions/upload-artifact@v4
+        with:
+          name: app
+          path: target/social-network-0.0.1-SNAPSHOT.jar
 
+  deploy:
+    runs-on: [ ubuntu-latest ]
+    steps:
       - name: Configure AWS credentials
         id: assume_role
         uses: aws-actions/configure-aws-credentials@v4
@@ -43,11 +50,16 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
+        uses: actions/download-artifact@v4
+        with:
+          name: app
+          path: target/social-network-0.0.1-SNAPSHOT.jar
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
           REPOSITORY: test-repo
         run: |
+          ls
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           echo "image=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
