--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,14 @@ jobs:
         with:
           mask-password: 'true'
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: app
           path: target/social-network-0.0.1-SNAPSHOT.jar
+
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
