--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Build Project
         run: mvn clean package -DskipTests
-        uses: actions/upload-artifact@v4
+        
+      - uses: actions/upload-artifact@v4
         with:
           name: app
           path: target/social-network-0.0.1-SNAPSHOT.jar
@@ -48,8 +49,7 @@ jobs:
         with:
           mask-password: 'true'
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: app
           path: target/social-network-0.0.1-SNAPSHOT.jar
