--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,15 @@ jobs:
 
       - name: Build Project
         run: mvn clean package -DskipTests
-        
+
       - uses: actions/upload-artifact@v4
         with:
           name: app
           path: target/social-network-0.0.1-SNAPSHOT.jar
 
   deploy:
+    needs: 
+      - build
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Configure AWS credentials
