--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: app
-          path: target/social-network-0.0.1-SNAPSHOT.jar
+          path: target
 
   deploy:
     needs: 
